Add Langfuse tracing, 3-second processing feedback, and disable chat-service
- Implemented complete Langfuse observability with OpenTelemetry
- Added ProcessingTimeTracker (speaks at 3s if slow)
- Updated UserIdleProcessor to 20s timeout
- Added custom span tracking for 8 API calls
- Disabled chat-service container (future use)
- Added test_traces.json/ to .gitignore and .dockerignore

--- a/.dockerignore
+++ b/.dockerignore
@@ -67,6 +67,9 @@ tests/
 test_*.py
 test.py
 
+# Langfuse trace files (local testing only)
+test_traces.json/
+
 # Large data files - be specific to avoid blocking needed files
 extra/*.json
 recordings/*.json
