--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,16 @@ pymysql
 aiomysql
 
 # ============================================
+# OBSERVABILITY - LangFuse & OpenTelemetry
+# ============================================
+langfuse==3.1.0
+opentelemetry-api>=1.33.1,<2.0.0
+opentelemetry-sdk>=1.33.1,<2.0.0
+opentelemetry-exporter-otlp-proto-http>=1.33.1,<2.0.0
+opentelemetry-instrumentation-fastapi>=0.48b0
+opentelemetry-instrumentation-requests>=0.48b0
+
+# ============================================
 # DASHBOARD API DEPENDENCIES
 # ============================================
 # PostgreSQL async driver (Supabase)
