fix: prevent 'Attendi...' message playing after bot response
- Moved ProcessingTimeTracker after LLM in pipeline to detect downstream frames
- Changed detection from LLMFullResponseStartFrame to LLMTextFrame
- LLMTextFrame only fires for actual text responses, not function calls (routing)
- Start timer on UserStoppedSpeakingFrame instead of TranscriptionFrame
- Added safety check to prevent injection if bot already responding

Fixes race condition where 'Attendi qualche secondo che sto cercando' would
play after bot finished speaking, especially after user interruptions.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,8 @@ services:
       - OTEL_SERVICE_NAME=pipecat-healthcare-agent-1
       - ENVIRONMENT=${ENVIRONMENT:-production}
       - VERSION=${VERSION:-1.0.0}
+      # Processing Time Tracker Configuration
+      - PROCESSING_TIME_THRESHOLD=${PROCESSING_TIME_THRESHOLD:-4.0}
     env_file:
       - .env
     restart: unless-stopped
@@ -93,6 +95,8 @@ services:
       - OTEL_SERVICE_NAME=pipecat-healthcare-agent-2
       - ENVIRONMENT=${ENVIRONMENT:-production}
       - VERSION=${VERSION:-1.0.0}
+      # Processing Time Tracker Configuration
+      - PROCESSING_TIME_THRESHOLD=${PROCESSING_TIME_THRESHOLD:-4.0}
     env_file:
       - .env
     restart: unless-stopped
@@ -144,6 +148,8 @@ services:
       - OTEL_SERVICE_NAME=pipecat-healthcare-agent-3
       - ENVIRONMENT=${ENVIRONMENT:-production}
       - VERSION=${VERSION:-1.0.0}
+      # Processing Time Tracker Configuration
+      - PROCESSING_TIME_THRESHOLD=${PROCESSING_TIME_THRESHOLD:-4.0}
     env_file:
       - .env
     restart: unless-stopped
