LLM-based call categorization + disable    booking agent
   - call_data_extractor: LLM fully determines esito_chiamata/motivazione
     - Add strict enum validation with all 9 valid combinations
     - Normalize LLM variations (Info. fornite → Info fornite)
     - Remove hardcoded overrides in save_to_database
     - Pass LLM values through analyze_for_transfer

   - router: Disable booking, route all calls to info agent
     - Comment out route_to_booking function
     - Update prompts to politely decline booking requests

   - Add docs: RLS with edge functions, LLM categorization
   - Add task-docs for implementation tracking

--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ venv.bak/
 .spyderproject
 .spyproject
 .ropeproject
-.claude/
+.claude/settings.local.json
 
 # Testing and Coverage
 .coverage
@@ -147,8 +147,6 @@ cache/
 # Azure Storage local files
 20*_*.json
 
-# Claude workspace files
-.claude/
 
 # Extra folders that shouldn't be committed
 extra/
@@ -156,7 +154,6 @@ extra/
 # Development and testing files
 test.py
 test_*.py
-CLAUDE.md
 
 # Langfuse trace files (local testing only)
 test_traces.json/
@@ -167,3 +164,7 @@ test_traces.json/
 # Development helper files
 .envrc
 activate.sh
+
+
+# External reference repos (cloned for Claude to research)
+_refs/
